<resources>
    <string name="app_name">NewsApp</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_news">No News Found</string>
    <string name="title">Title:</string>
    <string name="section">Section:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="author">Author</string>
</resources>
